[gd_scene format=3 uid="uid://cunqa40jhnw71"]

[ext_resource type="Texture2D" uid="uid://b88pyd50q67bi" path="res://assets/ui/suite.png" id="1_i8df0"]
[ext_resource type="Script" uid="uid://btl7xhhucxrtc" path="res://scripts/ui/intro.gd" id="1_j6b1i"]
[ext_resource type="FontFile" uid="uid://ki71rasupmd0" path="res://assets/fonts/CourierPrime-Bold.ttf" id="2_i5xbi"]
[ext_resource type="Texture2D" uid="uid://g6svakldn1ac" path="res://assets/ui/titouan.png" id="2_v38ad"]
[ext_resource type="Script" uid="uid://chqmuokdpbdgr" path="res://scenes/bouton_reactif.gd" id="4_i5xbi"]

[sub_resource type="LabelSettings" id="LabelSettings_i8df0"]
font = ExtResource("2_i5xbi")
font_size = 24
font_color = Color(0, 0, 0, 1)

[node name="Intro" type="Control" unique_id=1356058541]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j6b1i")

[node name="ColorRect" type="ColorRect" parent="." unique_id=849822323]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect" unique_id=1788355649]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -271.5
offset_top = -294.0
offset_right = -12.5
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_v38ad")
expand_mode = 3
stretch_mode = 5

[node name="Dialogue" type="Panel" parent="." unique_id=921932314]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -247.5
offset_top = -64.0
offset_right = 247.5
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2

[node name="TexteHistoire" type="Label" parent="." unique_id=1851826441]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -234.0
offset_top = -64.0
offset_right = 229.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 6
label_settings = SubResource("LabelSettings_i8df0")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="BoutonSuite" type="TextureButton" parent="." unique_id=1985489694]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -142.25
offset_top = -156.0
offset_right = 142.25
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("1_i8df0")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("4_i5xbi")

[connection signal="pressed" from="BoutonSuite" to="." method="_on_bouton_suite_pressed"]
